syntax = "proto3";

package paymentservice;

// Esta es la l√≠nea que especifica el go_package
option go_package = "./paymentservice;paymentservice";

service PaymentService {
    rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
    rpc GetPaymentStatus (GetPaymentStatusRequest) returns (GetPaymentStatusResponse);
}

message ProcessPaymentRequest {
    string payment_id = 1;
    string user_id = 2;
    double amount = 3;
}

message ProcessPaymentResponse {
    string payment_id = 1;
    string status = 2;
    string message = 3;
}

message GetPaymentStatusRequest {
    string payment_id = 1;
}

message GetPaymentStatusResponse {
    string payment_id = 1;
    string status = 2;
}
